Add Manual Calculation

--- a/LR.ipynb
+++ b/LR.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "996ce417",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "74c984fe",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "4       6     50"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "48123d3f",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "0306e014",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2482637d",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "af5c179e",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "82b22d4f",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "array([2.62096774])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "e0370195",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "35.16129032258065"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "2d85ed56",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "65e4a32d",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "       48.26612903, 53.50806452])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "784a56be",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "4       6     50"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "b01d66db",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "4       6     50        50.887097"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "71f2745f",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "7cc0e1fb",
    "metadata": {},
    "outputs": [
@@ -577,6 +577,20 @@
        "      <td>50.887097</td>\n",
        "      <td>-0.887097</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>55</td>\n",
+       "      <td>48.266129</td>\n",
+       "      <td>6.733871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>60</td>\n",
+       "      <td>53.508065</td>\n",
+       "      <td>6.491935</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -587,16 +601,18 @@
        "1       4     60        45.645161  14.354839\n",
        "2       5     20        48.266129 -28.266129\n",
        "3       3     50        43.024194   6.975806\n",
-       "4       6     50        50.887097  -0.887097"
+       "4       6     50        50.887097  -0.887097\n",
+       "5       5     55        48.266129   6.733871\n",
+       "6       7     60        53.508065   6.491935"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(7)"
    ]
   },
   {
@@ -609,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "fc9558d6",
    "metadata": {},
    "outputs": [],
@@ -621,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "7f66f4f6",
    "metadata": {},
    "outputs": [
@@ -631,7 +647,7 @@
        "167.30990783410135"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "d7509cc8",
    "metadata": {},
    "outputs": [],
@@ -652,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "d0dba3cc",
    "metadata": {},
    "outputs": [
@@ -662,7 +678,7 @@
        "9.87327188940092"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
